[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/dardanbujupaj.node_warnings/RuleList.gd" type="Script" id=1]

[node name="RuleList" type="VBoxContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="HBoxContainer" parent="."]
margin_right = 506.0
margin_bottom = 24.0

[node name="WarningRules" type="Label" parent="Toolbar"]
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
text = "Warning rules"

[node name="Filter" type="LineEdit" parent="Toolbar"]
margin_left = 92.0
margin_right = 430.0
margin_bottom = 24.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Filter warnings"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditRules" type="Button" parent="Toolbar"]
margin_left = 434.0
margin_right = 506.0
margin_bottom = 24.0
text = "Edit rules"

[node name="Tree" type="Tree" parent="."]
margin_top = 28.0
margin_right = 506.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassPopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
[connection signal="text_changed" from="Toolbar/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="custom_popup_edited" from="Tree" to="." method="_on_Tree_custom_popup_edited"]
[connection signal="index_pressed" from="ClassPopupMenu" to="." method="_on_ClassPopupMenu_index_pressed"]
